[gd_scene load_steps=19 format=3 uid="uid://df836nf75tnti"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_tg73c"]
[ext_resource type="Texture2D" uid="uid://cew5lkeypxd28" path="res://resources/Game-Task-and-Questions/islands/Inseln - Hintergrund.svg" id="2_klx23"]
[ext_resource type="Texture2D" uid="uid://di46vbwu1wa1e" path="res://resources/Game-Task-and-Questions/islands/Inseln-Alle.svg" id="3_p364j"]
[ext_resource type="Texture2D" uid="uid://b3yjpm2wqnlf7" path="res://resources/settings/settings_board.png" id="3_qikft"]
[ext_resource type="Texture2D" uid="uid://btajvujcjklih" path="res://resources/Game UI Design/icons/go back.svg" id="4_8iam4"]
[ext_resource type="FontFile" uid="uid://dw4iukt1mkhmb" path="res://resources/Game UI Design/icons/Century-Schoolbook/SCHLBKB.TTF" id="4_sjknu"]
[ext_resource type="Texture2D" uid="uid://db3q7xdlqun1h" path="res://resources/Game UI Design/icons/volume.svg" id="5_6wfvq"]
[ext_resource type="Texture2D" uid="uid://b3q5ixvt5ugw2" path="res://resources/Game UI Design/icons/volume_muted.svg" id="6_fe6q6"]
[ext_resource type="Script" path="res://volume_slider.gd" id="6_vsow1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r5ad6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_caa4q"]
atlas = ExtResource("6_fe6q6")
region = Rect2(0, 0, 292, 289)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaxtk"]
atlas = ExtResource("5_6wfvq")
region = Rect2(0, 0, 292, 289)

[sub_resource type="SpriteFrames" id="SpriteFrames_tymve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_caa4q")
}],
"loop": true,
"name": &"muted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaxtk")
}],
"loop": true,
"name": &"unmuted",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0lppr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6g3p7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x716q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aij43"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mb43l"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tg73c")

[node name="Hintergrund" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -134.0
offset_right = 180.0
offset_bottom = 718.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_klx23")

[node name="Board" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 99.0
offset_top = 41.0
offset_right = 1027.0
offset_bottom = 618.0
texture = ExtResource("3_qikft")
expand_mode = 1

[node name="Label" type="Label" parent="Board"]
layout_mode = 0
offset_left = 240.0
offset_top = 36.0
offset_right = 758.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("4_sjknu")
theme_override_font_sizes/font_size = 45
text = "Einstellungen"
uppercase = true

[node name="Inseln" type="TextureRect" parent="."]
visible = false
layout_mode = 2
offset_left = 679.0
offset_top = 201.0
offset_right = 1129.0
offset_bottom = 468.0
texture = ExtResource("3_p364j")
expand_mode = 1

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 124.0
offset_top = 50.0
offset_right = 236.0
offset_bottom = 162.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_r5ad6")
icon = ExtResource("4_8iam4")
vertical_icon_alignment = 0
expand_icon = true

[node name="masterButtonSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(231.344, 244.125)
scale = Vector2(0.146194, 0.146194)
sprite_frames = SubResource("SpriteFrames_tymve")
animation = &"unmuted"

[node name="masterButton" type="Button" parent="masterButtonSprite"]
offset_left = -150.485
offset_top = -150.485
offset_right = 152.515
offset_bottom = 152.515
theme_override_styles/normal = SubResource("StyleBoxEmpty_0lppr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6g3p7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_x716q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aij43")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mb43l")

[node name="master" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.656
offset_top = -96.875
offset_right = 342.344
offset_bottom = -58.875
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_vsow1")
bus_name = "Master"

[node name="Master Volume" type="Label" parent="master"]
modulate = Color(0.0911214, 0.0911215, 0.0911214, 1)
layout_mode = 0
offset_left = 209.0
offset_top = -38.0
offset_right = 433.0
offset_bottom = 1.0
theme_override_font_sizes/font_size = 25
text = "Master-Lautstärke"

[node name="musicButtonSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(231.344, 336.125)
scale = Vector2(0.146194, 0.146194)
sprite_frames = SubResource("SpriteFrames_tymve")
animation = &"unmuted"

[node name="musicButton" type="Button" parent="musicButtonSprite"]
offset_left = -150.485
offset_top = -150.485
offset_right = 152.515
offset_bottom = 152.515
theme_override_styles/normal = SubResource("StyleBoxEmpty_0lppr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6g3p7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_x716q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aij43")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mb43l")

[node name="music" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.656
offset_top = -5.87497
offset_right = 342.344
offset_bottom = 32.125
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_vsow1")
bus_name = "Music"

[node name="Music Volume" type="Label" parent="music"]
modulate = Color(0.0911214, 0.0911215, 0.0911214, 1)
layout_mode = 0
offset_left = 209.0
offset_top = -38.0
offset_right = 433.0
offset_bottom = 1.0
theme_override_font_sizes/font_size = 25
text = "Hintergrundmusik"

[node name="sfxButtonSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(231.344, 425.125)
scale = Vector2(0.146194, 0.146194)
sprite_frames = SubResource("SpriteFrames_tymve")
animation = &"unmuted"

[node name="sfxButton" type="Button" parent="sfxButtonSprite"]
offset_left = -150.485
offset_top = -157.326
offset_right = 152.515
offset_bottom = 145.674
theme_override_styles/normal = SubResource("StyleBoxEmpty_0lppr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6g3p7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_x716q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aij43")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mb43l")

[node name="sfx" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.656
offset_top = 81.125
offset_right = 342.344
offset_bottom = 119.125
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.001
script = ExtResource("6_vsow1")
bus_name = "SFX"

[node name="SFX Volume" type="Label" parent="sfx"]
modulate = Color(0.0911214, 0.0911215, 0.0911214, 1)
layout_mode = 0
offset_left = 204.656
offset_top = -38.125
offset_right = 414.656
offset_bottom = 0.874969
theme_override_font_sizes/font_size = 25
text = "Geräuscheffekte"

[node name="question_limit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 492.0
offset_right = 659.0
offset_bottom = 523.0
placeholder_text = "hier eingeben"
alignment = 1

[node name="qustion_limit_title" type="Label" parent="question_limit"]
layout_mode = 0
offset_left = -11.0
offset_top = -44.0
offset_right = 257.0
offset_bottom = 7.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Fragen Grenze"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="masterButtonSprite/masterButton" to="." method="_on_master_button_pressed"]
[connection signal="pressed" from="musicButtonSprite/musicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="sfxButtonSprite/sfxButton" to="." method="_on_sfx_button_pressed"]
